# BootBone

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.old
docs/: info.txt
main/: CMakeLists.txt  bbapi.c  indicator.c  main.c  network_mgr.c  nvs_store.c  sta_comm.c  webserver.c  ws_comm.c
main/include/: bbapi.h  events.h  indicator.h  network_mgr.h  nvs_store.h  sta_comm.h  webserver.h  ws_comm.h
